tests/ui/traits/unconstrained-projection-normalization.next.stderr
error[E0207]: the type parameter `T` is not constrained by the impl trait, self type, or predicates
  --> $DIR/unconstrained-projection-normalization.rs:13:6
   |
LL | impl<T: ?Sized> Every for Thing {
   |      ^ unconstrained type parameter

error[E0282]: type annotations needed
  --> $DIR/unconstrained-projection-normalization.rs:18:11
   |
LL | static I: <Thing as Every>::Assoc = 3;
   |           ^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type

error[E0282]: type annotations needed
  --> $DIR/unconstrained-projection-normalization.rs:18:37
   |
LL | static I: <Thing as Every>::Assoc = 3;
   |                                     ^ cannot infer type

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0207, E0282.
For more information about an error, try `rustc --explain E0207`.
